[gd_scene load_steps=8 format=3 uid="uid://cw1yglwbk17sq"]

[ext_resource type="Script" uid="uid://bqjy4prnvyagp" path="res://Scripts/shop.gd" id="1_l5jkk"]
[ext_resource type="FontFile" uid="uid://dm2e0fgq0n617" path="res://Jersey15-Regular.ttf" id="3_lmqlo"]
[ext_resource type="Texture2D" uid="uid://b64xv3e451jkk" path="res://Sprites/Emojis/green_heart.png" id="6_y8wv3"]
[ext_resource type="Texture2D" uid="uid://3oulom7cxwf2" path="res://Sprites/Emojis/shield.png" id="7_jw70x"]
[ext_resource type="Texture2D" uid="uid://1ju4xsgisdk0" path="res://Sprites/Emojis/man-running.png" id="8_ji15u"]
[ext_resource type="Texture2D" uid="uid://ofcfc8f1ommd" path="res://Sprites/Emojis/shopping_bags.png" id="9_buvk0"]
[ext_resource type="Texture2D" uid="uid://cgk7vmcvsfsr7" path="res://Sprites/Emojis/dollar.png" id="10_jw70x"]

[node name="shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 7.0
offset_right = 25.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5jkk")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -24.0
offset_top = -5.0
offset_right = 1133.0
offset_bottom = 642.0
color = Color(0.882353, 0.52549, 0.298039, 1)

[node name="shop" type="Label" parent="."]
layout_mode = 0
offset_left = -18.0
offset_top = -10.0
offset_right = 1134.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 100
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="money" type="Label" parent="."]
layout_mode = 0
offset_left = -19.0
offset_top = 120.0
offset_right = 1131.0
offset_bottom = 221.0
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="continue" type="Button" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 518.0
offset_right = 734.0
offset_bottom = 605.0
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="GreenHeart" type="Sprite2D" parent="."]
position = Vector2(572, 408)
scale = Vector2(0.3875, 0.35)
texture = ExtResource("6_y8wv3")

[node name="Shield" type="Sprite2D" parent="."]
position = Vector2(928, 405.5)
scale = Vector2(0.475, 0.38125)
texture = ExtResource("7_jw70x")

[node name="Man-running" type="Sprite2D" parent="."]
position = Vector2(158, 407)
scale = Vector2(0.425, 0.3875)
texture = ExtResource("8_ji15u")

[node name="speed" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 273.0
offset_right = 374.0
offset_bottom = 359.0
theme_override_fonts/normal_font = ExtResource("3_lmqlo")
theme_override_font_sizes/normal_font_size = 40
text = "15% speed increase"

[node name="health" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 493.0
offset_top = 266.0
offset_right = 777.0
offset_bottom = 352.0
theme_override_fonts/normal_font = ExtResource("3_lmqlo")
theme_override_font_sizes/normal_font_size = 40
text = "15% health increase"

[node name="grenade" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 886.0
offset_top = 313.0
offset_right = 1170.0
offset_bottom = 399.0
theme_override_fonts/normal_font = ExtResource("3_lmqlo")
theme_override_font_sizes/normal_font_size = 40
text = "Shield"

[node name="speed_button" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 367.0
offset_right = 231.0
offset_bottom = 443.0
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 50

[node name="health_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.025
offset_left = 492.0
offset_top = 370.0
offset_right = 625.72
offset_bottom = 429.8
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 50

[node name="grenade_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.025
offset_left = 852.0
offset_top = 365.0
offset_right = 985.72
offset_bottom = 424.8
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 50

[node name="speed_label" type="Label" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 450.0
offset_right = 316.0
offset_bottom = 564.0
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 60
text = "20"

[node name="speed_label2" type="Label" parent="."]
layout_mode = 0
offset_left = 545.0
offset_top = 452.0
offset_right = 734.0
offset_bottom = 566.0
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 60
text = "20"

[node name="speed_label3" type="Label" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 446.0
offset_right = 1089.0
offset_bottom = 560.0
theme_override_fonts/font = ExtResource("3_lmqlo")
theme_override_font_sizes/font_size = 60
text = "40"

[node name="ShoppingBags" type="Sprite2D" parent="."]
position = Vector2(380, 58)
scale = Vector2(0.75625, 0.74375)
texture = ExtResource("9_buvk0")

[node name="ShoppingBags2" type="Sprite2D" parent="."]
position = Vector2(744, 52)
scale = Vector2(0.75625, 0.74375)
texture = ExtResource("9_buvk0")

[node name="Dollar" type="Sprite2D" parent="."]
position = Vector2(466, 162)
scale = Vector2(0.628125, 0.621875)
texture = ExtResource("10_jw70x")

[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="speed_button" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="health_button" to="." method="_on_health_button_pressed"]
[connection signal="pressed" from="grenade_button" to="." method="_on_grenade_button_pressed"]
